# programming_exercises

./: .gitignore  README.md
exercises/computer_vision/opencv/: CMakeLists.txt
exercises/parallel_programming/cuda/: CMakeLists.txt
exercises/parallel_programming/cuda/include/: CudaMacros.cuh  Logger.h
exercises/parallel_programming/cuda/src/BranchlessGreaterOrEqual/: BranchlessKernel.cu  BranchlessKernel.cuh  DefaultKernel.cu  DefaultKernel.cuh  Experiment.cu
exercises/parallel_programming/cuda/src/MatrixTranspose/: MatrixTranspose.cu  MatrixTransposeDefaultKernel.cu  MatrixTransposeDefaultKernel.cuh
exercises/parallel_programming/cuda/src/PrintCudaDeviceProperties/: PrintCudaDeviceProperties.cu
